- Startskript fix - Kommentare